<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="utng.edu.mx.unidad1.MainActivity"
    android:background="@drawable/ecu">

    <TextView
        android:text="@string/ecuaci_n_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_ecu1"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_marginTop="88dp"
        android:textColor="#3ac999"
        android:id="@+id/textView2" />

    <Button
        android:text="@string/entrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignRight="@+id/btn_ecu1"
        android:layout_alignEnd="@+id/btn_ecu1"
        android:layout_marginTop="29dp"
        android:id="@+id/btn_ecu2"
        android:background="@android:color/holo_red_dark"
        android:onClick="lanzarEcuacion1"
        android:textColor="#ffffff"/>

    <TextView
        android:text="@string/ecuaci_n_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="141dp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:textColor="#3ac999"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/entrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:id="@+id/btn_ecu1"
        android:background="@android:color/holo_red_dark"
        android:textColor="#ffffff"
        android:onClick="lanzarEcuacion2"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ecu"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView2" />


</RelativeLayout>
